# Mipt-RTOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh
examples/1/: Makefile  config.json  config_asm_version.json  main.cpp
examples/2/: main.cpp
rtosconfig/: CMakeLists.txt  builder.h  config.cpp  config.h  lib_builder.cpp  lib_builder.h  main.cpp  parser.cpp  parser.h
rtosconfig/include/: config.h  parser.h
rtosconfig/src/: lib_builder.cpp  main.cpp  parser.cpp
rtoslib/include/: asm_macro.h  asm_macro_linux_x86.h  kernel_module.h  platform.h  platform_linux_x86.h  task_module.h
rtoslib/linux_x86/: input.h  kernel_module.cpp  kernel_module.h  lock.h  output.h  platform.cpp  platform.h
rtoslib/linux_x86_asm/: kernel_module.cpp  kernel_module.h
rtoslib/src/: kernel_module.cpp
